kube/cattle/kibana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok-kibana
spec:
  minReadySeconds: 5
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-ci-butler
      app.kubernetes.io/svc: ngrok-kibana
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        drone-ci-butler/role: infra
        app.kubernetes.io/svc: ngrok-kibana
    spec:
      containers:
      - image: wernight/ngrok:latest
        imagePullPolicy: IfNotPresent
        name: ngrok
