kube/cattle/postgres.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        drone-ci-butler/role: infra
        app.kubernetes.io/svc: postgres
    spec:
      initContainers: # https://faun.pub/digitalocean-kubernetes-and-volume-permissions-820f46598965
      - name: volume-permission-fix
        image: busybox
        command: ["/bin/chmod","-R","777", "/data"]
        volumeMounts:
        - name: data
          mountPath: /data
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    drone-ci-butler/role: infra
    app.kubernetes.io/svc: postgres

spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres

  selector:
    app.kubernetes.io/svc: postgres
