kube/cattle/queue.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  # serviceAccountName: user
  minReadySeconds: 5
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-ci-butler
      app.kubernetes.io/svc: queue
  template:
    metadata:
      labels:
        drone-ci-butler/role: application
        app.kubernetes.io/svc: queue
    spec:
      volumes:
        - name: yaml-config
          configMap:
            name: config
            items:
              - key: drone-ci-butler.yml
                path: drone-ci-butler.yml

      # initContainers:
      # - image: "drone-ci-butler:latest"
      #   imagePullPolicy: IfNotPresent
      #   name: purge-redis-queues
      #   command:
      #     - "drone-ci-butler"
      #     - "purge"
      #     - "--redis-queue"
      #   envFrom:
      #     - configMapRef:
      #         name: env

      #   volumeMounts:
      #   - name: yaml-config
      #     mountPath: /butler/drone-ci-butler.yml
      #     subPath: drone-ci-butler.yml

      # - image: "drone-ci-butler:latest"
      #   imagePullPolicy: IfNotPresent
      #   name: schedule-builds-for-analysis
      #   command:
      #     - "drone-ci-butler"
      #     - "builds"
      #     - "--redis-only"
      #     - "--strict-filters"
      #   envFrom:
      #     - configMapRef:
      #         name: env

      #   volumeMounts:
      #   - name: yaml-config
      #     mountPath: /butler/drone-ci-butler.yml
      #     subPath: drone-ci-butler.yml

      containers:
      - image: "drone-ci-butler:latest"
        imagePullPolicy: IfNotPresent
        name: queue
        command: ['drone-ci-butler', 'queue']
        ports:
        - containerPort: 5555
          name: reply
        - containerPort: 6666
          name: pull
        - containerPort: 7777
          name: push
        - containerPort: 7772
          name: monitor
        volumeMounts:
        - name: yaml-config
          mountPath: /butler/drone-ci-butler.yml
          subPath: drone-ci-butler.yml

---
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    drone-ci-butler/role: application
    app.kubernetes.io/svc: queue

spec:
  type: NodePort
  ports:
    - port: 5555
      targetPort: 5555
      protocol: TCP
      name: reply

    - port: 6666
      targetPort: 6666
      protocol: TCP
      name: pull

    - port: 7777
      targetPort: 7777
      protocol: TCP
      name: push

    - port: 7772
      targetPort: 7772
      protocol: TCP
      name: monitor


  selector:
    app.kubernetes.io/svc: queue
